--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="contactsList">Contacts List</string>
     <string name="contactslist_button_addcontact">Add contact</string>
+    <string name="contactdetails_button_cancel">Cancel</string>
+    <string name="contactdetails_button_savechanges">Save changes</string>
+    <string name="contactdetails_button_addnewcontact">Add new contact</string>
+    <string name="contactdetails_button_deletecontact">Delete contact</string>
+    <string name="contactdetails_textview_firstname">First Name</string>
+    <string name="contactdetails_textview_lastname">Last Name</string>
+    <string name="contactdetails_textview_dateofbirth">Date of Birth</string>
+    <string name="contactdetails_textview_email">Email</string>
+    <string name="contactdetails_textview_phonenumber">Phone number</string>
+    <string name="contactdetails_textview_city">City</string>
 </resources>
