--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="contactsList">Contacts List</string>
     <string name="contactslist_button_addcontact">Add contact</string>
+    <string name="str_save_changes">Save changes</string>
+    <string name="str_add_contact">Add Contact</string>
+    <string name="str_cancel">Cancel</string>
+    <string name="str_delete">Delete</string>
+    <string name="str_favorite">Favorite</string>
+    <string name="str_city">City</string>
+    <string name="str_phone_number">Phone number</string>
+    <string name="str_email">Email</string>
+    <string name="str_date_of_birth">Date of Birth</string>
+    <string name="str_last_name">Last Name</string>
+    <string name="str_first_name">First Name</string>
 </resources>
